--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>  
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
-  </head> 
+  </head>
   <body>
 
     <div class="container">
       <h1>Refresh Me</h1>
+      <h3>Keep Refresh Me</h3>
 
       <div class="dice">
         <p>Player 1</p>
